data/derived/sp14/progs/unify/prog4578.ml.out
Characters 145-146:
  let seen' = if List.mem h seen= false then seen @ h in
                                                    ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
